# codecrafters-kafka-rust

./: Cargo.toml  README.md
src/: main.rs
src/custom_trait/: cursor.rs
src/handler/: api_version.rs  describe_topic_partitions.rs  fetch.rs  mod.rs
src/metadata/: cluster.rs
src/protocol/: request.rs  response.rs
